<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/loginmain"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    tools:context=".MainActivity">






    <!---
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

      -->


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/ed_usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User Name"
        android:layout_below="@+id/textView1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/white"
        android:autofillHints=""
        tools:ignore="HardcodedText,TextFields" />

    <EditText
        android:id="@+id/ed_passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_below="@+id/ed_usernameLogin"
        android:inputType="numberPassword"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:layout_below="@+id/ed_passwordLogin"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"

        />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_toRightOf="@+id/btn_login"
        android:layout_below="@+id/ed_passwordLogin"
        android:layout_marginStart="80dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/signup"
        android:layout_toRightOf="@+id/btn_login"
        android:layout_below="@+id/ed_passwordLogin"
        android:textColor="@color/white"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        />
</LinearLayout>
